cmake_minimum_required(VERSION 2.8)
project( LooterShooter )
find_package( OpenCV REQUIRED )
add_executable( DisplayImage DisplayImage.cpp )
add_executable( bg_sub bg_sub.cpp )
add_executable( objectDetection2 objectDetection2.cpp )
add_executable( VideoFromCamera VideoFromCamera.cpp )
#add_executable( BackgroundSub BackgroundSub.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( bg_sub ${OpenCV_LIBS} )
target_link_libraries( objectDetection2 ${OpenCV_LIBS} )
target_link_libraries( VideoFromCamera ${OpenCV_LIBS} )
